// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecurityRoomSettingsTab /> history visibility uses shared as default history visibility when no state event found 1`] = `
<fieldset
  class="mx_SettingsFieldset"
>
  <legend
    class="mx_SettingsFieldset_legend"
  >
    Who can read history?
  </legend>
  <div
    class="mx_SettingsFieldset_description"
  >
    <div
      class="mx_SettingsSubsection_text"
    >
      Changes to who can read history will only apply to future messages in this room. The visibility of existing history will be unchanged.
    </div>
  </div>
  <div
    class="mx_SettingsFieldset_content"
  >
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
    >
      <input
        id="historyVis-world_readable"
        name="historyVis"
        type="radio"
        value="world_readable"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Anyone
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled mx_StyledRadioButton_checked"
    >
      <input
        checked=""
        id="historyVis-shared"
        name="historyVis"
        type="radio"
        value="shared"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Members only (since the point in time of selecting this option)
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
    >
      <input
        id="historyVis-invited"
        name="historyVis"
        type="radio"
        value="invited"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Members only (since they were invited)
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
    <label
      class="mx_StyledRadioButton mx_StyledRadioButton_enabled"
    >
      <input
        id="historyVis-joined"
        name="historyVis"
        type="radio"
        value="joined"
      />
      <div>
        <div />
      </div>
      <div
        class="mx_StyledRadioButton_content"
      >
        Members only (since they joined)
      </div>
      <div
        class="mx_StyledRadioButton_spacer"
      />
    </label>
  </div>
</fieldset>
`;

exports[`<SecurityRoomSettingsTab /> join rule handles error when updating join rule fails 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_ErrorDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
>
  <div
    class="mx_Dialog_header"
  >
    <h1
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Failed to update the join rules
    </h1>
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    Unknown failure
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <button
      class="mx_Dialog_primary"
    >
      OK
    </button>
  </div>
  <div
    aria-label="Close dialog"
    class="mx_AccessibleButton mx_Dialog_cancelButton"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`<SecurityRoomSettingsTab /> join rule warns when trying to make an encrypted room public 1`] = `
<div
  aria-describedby="mx_Dialog_content"
  aria-labelledby="mx_BaseDialog_title"
  class="mx_QuestionDialog mx_Dialog_fixedWidth"
  data-focus-lock-disabled="false"
  role="dialog"
>
  <div
    class="mx_Dialog_header"
  >
    <h1
      class="mx_Heading_h3 mx_Dialog_title"
      id="mx_BaseDialog_title"
    >
      Are you sure you want to make this encrypted room public?
    </h1>
  </div>
  <div
    class="mx_Dialog_content"
    id="mx_Dialog_content"
  >
    <div>
      <p>
         
        <span>
          <strong>
            It's not recommended to make encrypted rooms public.
          </strong>
           It will mean anyone can find and join the room, so anyone can read messages. You'll get none of the benefits of encryption. Encrypting messages in a public room will make receiving and sending messages slower.
        </span>
         
      </p>
      <p>
         
        <span>
          To avoid these issues, create a 
          <div
            class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_link_inline"
            role="button"
            tabindex="0"
          >
             
            new public room
             
          </div>
           for the conversation you plan to have.
        </span>
         
      </p>
    </div>
  </div>
  <div
    class="mx_Dialog_buttons"
  >
    <span
      class="mx_Dialog_buttons_row"
    >
      <button
        data-testid="dialog-cancel-button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="mx_Dialog_primary"
        data-testid="dialog-primary-button"
        type="button"
      >
        OK
      </button>
    </span>
  </div>
  <div
    aria-label="Close dialog"
    class="mx_AccessibleButton mx_Dialog_cancelButton"
    role="button"
    tabindex="0"
  />
</div>
`;
